Crawl etstcases from en.bib.la

--- a/Languages/EnglishSwedish/TestCases.txt
+++ b/Languages/EnglishSwedish/TestCases.txt
@@ -186,3 +186,4 @@
 "I have black trousers.", "Jag har svarta byxor."
 "He took the ball with the blue dot and kicked it", "Han tog bollen med den blåa pricken och sparkade den"
 "He took the table with the blue dot and kicked it", "Han tog bordet med den blåa pricken och sparkade det"
+"Berit flew to San Fransisco this morning", "Berit flög till San Fransisco i morse"
