--- a/Languages/EnglishSwedish/Words/Articles.txt
+++ b/Languages/EnglishSwedish/Words/Articles.txt
@@ -1,4 +1,5 @@
-:that: = :den|_t
-the::::<d = :den|_t::de
 a:: = en::_tt
 an:: = en::_tt
+:that: = :den|_t
+the::::<d = :den|_t::de
+:this = :den här
