--- a/Languages/EnglishSwedish/Words/Nouns.txt
+++ b/Languages/EnglishSwedish/Words/Nouns.txt
@@ -3,6 +3,7 @@ apple::s|<t = äpple:t:n:na
 ball::s| = boll:en:ar|na
 banana::s| = banan:en:er|na
 bed::s| = säng:en:ar|na
+bird::s| = fågel:n:_2lar|na
 book::s| = bok:en:_2öcker|na
 bouncing ball::s| = studsboll:en:ar|na
 car::s| = bil:en:ar|na
@@ -38,3 +39,4 @@ table::s|<t = bord:et:|en
 theater::s| = teater:n:_2rar|na
 ::trousers| = ::byxor|na
 wall::s| = vägg:en:ar|na
+window::s| = fönster:_2ret::na
