--- a/Languages/EnglishSwedish/Words/Verbs.txt
+++ b/Languages/EnglishSwedish/Words/Verbs.txt
@@ -4,6 +4,7 @@ come 4::s 4!came: 4:_ing = kom:ma 4:mer 4::mit :mer::mit:ma
 contain 4::s 4:ed: 4:ing = innehåll:a 4:er 4:_3öll:it :er:_3öll:it:a
 eat 4::s 4!ate:en 4:ing = ät:a 4:er 4!åt:it :er!åt:it:a
 find 4::s 5!found 4:ing = hitta: 4:r 4:de:t :r:de:t:
+fly 4::_ies 5:_ew 4:ing = flyga: 4:_er 4:_3ög:_4ugit :_er:_3ög:_rugit:
 give 4::s 4!gave:n 4:_ing = ge: 4:r 4!gav:tt :r!gav:tt:
 go 4::es 4!went:ne 4:ing = gå: 4:r 4!gick:tt :r!gick:tt:
 help 4::s 5:ed 4:ing = hjälp:a 4:er 4:te:t :er:te:t:a
@@ -15,6 +16,7 @@ make 4::s 5:_2de 4:_ing = gör:a 4: 4!gjorde|_2t :!gjorde|_2t:a
 paint 4::s 5:ed 4:ing = måla: 4:r 4:de:t :r:de:t:
 play 4::s 5:ed 4:ing = lek:a 4:er 4:te:t :er:te:t:a
 run 4::s 4!ran: 4:ning = spring:a 4:er 4:_3ang|_3ungit :er:_3ang|_3ungit:a
+see 4::s 4:_2aw:n 4:_ing = se: 4:r 4:_åg:tt :r:_åg:tt:
 shake 4::s 4:d:n 4:_ing = skaka: 4:r 4:de:t :r:de:t:
 sleep 4::s 5:_2pt 4:ing = sov:a 4:er 4::it :er::it:a
 sit 4::s 5!sat 4:ting = sitt:a 4:er 4!satt!suttit :er!satt!suttit:a
