--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,2 @@
-Generate patterns containing condensed code
-- optimize generate patterns
-Implement AffectedBy for condensed code
+Crawl test cases from en.bab.la in batches
+Handle synonyms (proximity in 3D-space)
