--- a/Languages/EnglishSwedish/Words/Nouns.txt
+++ b/Languages/EnglishSwedish/Words/Nouns.txt
@@ -12,6 +12,8 @@ chair::s| = stol:en:ar|na
 cheese::s| = ost:en:ar|na
 colour::s| = färg:en:er|na
 concert::s| = konsert:en:er|na/
+decision::s| = beslut:en::en
+director::s| = direktör:en:er|na
 doll::s| = docka:n:_or|na
 dot::s| = prick:en:_ar|na
 foot::_3eet| = fot:en:__ötter|na
@@ -19,6 +21,7 @@ error::s| = fel:et:er:en
 essay::s| = uppsats:en:er|na
 hall::s| = hall:en:ar|na
 hand::s| = hand:en:_3änder|na
+handling::s| = handläggning:en:ar|na
 lake::s| = sjö:n:ar|na
 livingroom::s| = vardagsrum:met::men
 mark::s| = märke:t:n|a
@@ -39,5 +42,6 @@ street::s| = gata:n:_or|na/_u
 table::s|<t = bord:et:|en
 theater::s| = teater:n:_2rar|na
 ::trousers| = ::byxor|na
+university::_ies| = universitet:et:en|s/s
 wall::s| = vägg:en:ar|na
 window::s| = fönster:_2ret::na
