--- a/Languages/EnglishSwedish/TestCases.txt
+++ b/Languages/EnglishSwedish/TestCases.txt
@@ -197,5 +197,7 @@
 
 //From en.bab.la
 "Flight 115 to Albuquerque, New Mexico.", "Flight 115 till Albuquerque, New Mexico."
-"Decisions on further handling of cases are taken by the Assistant University Director.", "Beslut om fortsatt handläggning fattas av biträdande universitetsdirektören."
+//"Decisions on further handling of cases are taken by the Assistant University Director.", "Beslut om fortsatt handläggning fattas av biträdande universitetsdirektören."
+//"the Assistant University Director", "biträdande universitetsdirektören"
+"the assistant university director", "biträdande universitetsdirektören"
 
