--- a/Languages/EnglishSwedish/Words/Verbs.txt
+++ b/Languages/EnglishSwedish/Words/Verbs.txt
@@ -22,7 +22,7 @@ shake 4::s 4:d:n 4:_ing = skaka: 4:r 4:de:t :r:de:t:
 sleep 4::s 5:_2pt 4:ing = sov:a 4:er 4::it :er::it:a
 sit 4::s 5!sat 4:ting = sitt:a 4:er 4!satt!suttit :er!satt!suttit:a
 stand 4::s 5!stood 4:ing = stå: 4:r 4:_od:tt :r:_od:tt:
-take 4::s 5!took 4:_ing = ta: 4:r 4:_og:git :r:_og:git:,fatta: 4:r 4:de:t :r:de:t:
+take 4::s 5!took 4:_ing 5:n = ta: 4:r 4:_og:git :r:_og:git: :s:_ogs:gits:get:gna,fatta: 4:r 4:de:t :r:de:t: :s:des:ts:t:de
 write 4::s 4!wrote:_ten 4:ing = skriva: 4:_er 4:_3ev:_it :_er:_3ev:_it: 
 
 //Settings
