--- a/Languages/EnglishSwedish/Words/Nouns.txt
+++ b/Languages/EnglishSwedish/Words/Nouns.txt
@@ -8,6 +8,7 @@ book::s| = bok:en:_2öcker|na
 bouncing ball::s| = studsboll:en:ar|na
 car::s| = bil:en:ar|na
 cat::s| = katt:en:er|na
+case::s| = fall:et::en
 chair::s| = stol:en:ar|na
 cheese::s| = ost:en:ar|na
 colour::s| = färg:en:er|na
@@ -21,7 +22,7 @@ error::s| = fel:et:er:en
 essay::s| = uppsats:en:er|na
 hall::s| = hall:en:ar|na
 hand::s| = hand:en:_3änder|na
-handling::s| = handläggning:en:ar|na
+handling of cases = handläggning
 lake::s| = sjö:n:ar|na
 livingroom::s| = vardagsrum:met::men
 mark::s| = märke:t:n|a
