--- a/Languages/EnglishSwedish/Words/Nouns.txt
+++ b/Languages/EnglishSwedish/Words/Nouns.txt
@@ -1,5 +1,6 @@
 address::es| = adress:en:er|na
 apple::s|<t = äpple:t:n:na
+assistant::s| = assistent:en:er|na
 ball::s| = boll:en:ar|na
 banana::s| = banan:en:er|na
 bed::s| = säng:en:ar|na
@@ -14,6 +15,7 @@ cheese::s| = ost:en:ar|na
 colour::s| = färg:en:er|na
 concert::s| = konsert:en:er|na/
 decision::s| = beslut:en::en
+department::s| = avdelning:en:ar|na
 director::s| = direktör:en:er|na
 doll::s| = docka:n:_or|na
 dot::s| = prick:en:_ar|na
@@ -31,6 +33,7 @@ morning::s| = morgon:en:_2nar|na
 mouse::_4ice| = mus:en:__öss|en
 nest::s|<t = bo:n|a|s
 pen::s| = penna:n:_or|na
+product::s|/ = produkt:en:er|na
 rainbow::s| = regnbåge:n:_ar|na
 rat::s| = råtta:n:_or|na
 result::s|<t = resultat:et::en
