Got next test working

--- a/Languages/EnglishSwedish/Words/Nouns.txt
+++ b/Languages/EnglishSwedish/Words/Nouns.txt
@@ -33,7 +33,7 @@ morning::s| = morgon:en:_2nar|na
 mouse::_4ice| = mus:en:__öss|en
 nest::s|<t = bo:n|a|s
 pen::s| = penna:n:_or|na
-product::s|/ = produkt:en:er|na
+product::s| = produkt:en:er|na/
 rainbow::s| = regnbåge:n:_ar|na
 rat::s| = råtta:n:_or|na
 result::s|<t = resultat:et::en
