Solved next testcase - rearrange including separator

--- a/Languages/EnglishSwedish/Words/Nouns.txt
+++ b/Languages/EnglishSwedish/Words/Nouns.txt
@@ -29,8 +29,10 @@ handling of cases = handläggning
 lake::s| = sjö:n:ar|na
 livingroom::s| = vardagsrum:met::men
 mark::s| = märke:t:n|a
+MEP card::s| = ledamotskort:en::en
 morning::s| = morgon:en:_2nar|na
 mouse::_4ice| = mus:en:__öss|en
+mr = herr
 nest::s|<t = bo:n|a|s
 pen::s| = penna:n:_or|na
 product::s| = produkt:en:er|na/
@@ -42,6 +44,7 @@ rug::s| = matta:n:_or|na
 salesman::_2en| = säljare:n::_na
 school::s| = skola:n:_or|na
 sea::s|<t = hav:et::en
+secretary::_ies| = sekreterare:n::_na
 search = sök/
 street::s| = gata:n:_or|na/_u
 table::s|<t = bord:et:|en
