--- a/Languages/EnglishSwedish/TestCases.txt
+++ b/Languages/EnglishSwedish/TestCases.txt
@@ -201,4 +201,5 @@
 "the Assistant University Director", "biträdande universitetsdirektören"
 "Decisions on further handling of cases are taken by the Assistant University Director.", "Beslut om fortsatt handläggning fattas av biträdande universitetsdirektören."
 "Camilla currently works as an assistant on the product department at Albrecht's Gold.", "Camilla arbetar idag som assistent på produktavdelningen på Albrekts Guld."
+"Despite this his assistant, or secretary, voted here with Mr Becali's MEP card.", "Trots detta röstade hans assistent, eller sekreterare, här med herr Becalis ledamotskort."
 
