--- a/Languages/EnglishSwedish/Testcases/en-bab-la_clean/testcases-a-11.txt
+++ b/Languages/EnglishSwedish/Testcases/en-bab-la_clean/testcases-a-11.txt
@@ -2,8 +2,8 @@
 "Flight 115 to Albuquerque, New Mexico.", "Flight 115 till Albuquerque, New Mexico."
 "Decisions on further handling of cases are taken by the Assistant University Director.", "Beslut om fortsatt handläggning fattas av biträdande universitetsdirektören."
 "Camilla currently works as an assistant on the product department at Albrecht's Gold.", "Camilla arbetar idag som assistent på produktavdelningen på Albrekts Guld."
-"Despite this his assistant, or secretary, voted here with Mr Becali's MEP card.", "Trots detta röstade hans assistent, eller sekreterare, här med George Becalis ledamotskort."
-"When he was my assistant, he was a very good policeman... with a bright future.", "När han var min assistent var han en bra polis med en ljus framtid."
+"Despite this his assistant, or secretary, voted here with Mr Becali's MEP card.", "Trots detta röstade hans assistent, eller sekreterare, här med herr Becalis ledamotskort."
+"When he was my assistant, he was a very good policeman... with a bright future.", "När han var min assistent var han en bra polis... med en ljus framtid."
 "As regards the delegation, the delegate has been appointed, as has the assistant delegate.", "Vad gäller delegationen är representanten utsedd, liksom den biträdande representanten."
 "There has been a reduction in the disparity at assistant, head of unit and director levels.", "Den ojämna könsfördelningen på assistent-, enhetschefs- och direktörsnivå har minskat."
 "The assistant supervisor may be able to contribute expertise that the main supervisor lacks.", "Handledaren kan exempelvis tillföra kompetens som huvudhandledaren saknar."
