--- a/Languages/EnglishSwedish/Words/AdverbQualifyings.txt
+++ b/Languages/EnglishSwedish/Words/AdverbQualifyings.txt
@@ -1,4 +1,5 @@
 fast:er:est = snabbt:_are:_ast
 further = fortsatt
-quickly:_ier:_iest = kvickt:_are:_ast
 not = inte
+quickly:_ier:_iest = kvickt:_are:_ast
+very = väldigt
