--- a/Languages/EnglishSwedish/Words/Nouns.txt
+++ b/Languages/EnglishSwedish/Words/Nouns.txt
@@ -19,10 +19,11 @@ department::s| = avdelning:en:ar|na
 director::s| = direktör:en:er|na
 doll::s| = docka:n:_or|na
 dot::s| = prick:en:_ar|na
-foot::_3eet| = fot:en:__ötter|na
 error::s| = fel:et:er:en
 essay::s| = uppsats:en:er|na
-gold = guld
+foot::_3eet| = fot:en:__ötter|na
+future::s| = framtid:en:er|na
+gold: = guld:et
 hall::s| = hall:en:ar|na
 hand::s| = hand:en:_3änder|na
 handling of cases = handläggning
@@ -35,6 +36,7 @@ mouse::_4ice| = mus:en:__öss|en
 mr = herr
 nest::s|<t = bo:n|a|s
 pen::s| = penna:n:_or|na
+policeman::__en| = polis:en:er|na
 product::s| = produkt:en:er|na/
 rainbow::s| = regnbåge:n:_ar|na
 rat::s| = råtta:n:_or|na
