--- a/Languages/EnglishSwedish/Words/Adjectives.txt
+++ b/Languages/EnglishSwedish/Words/Adjectives.txt
@@ -4,6 +4,7 @@ assistant = biträdande
 big::::er:est| = stor:t:a||_2örre:_2örst|a
 black::::er:est| = svart::a||re:ast|e
 blue::::r:st| = blå:tt:a||re:ast|e
+bright::::er:est| = ljus:t:a||re:ast|e
 red::::er:est| = röd:_tt:a||re:ast|e
 easy::::_ier|_st:_ily = lätt::a||re:ast|e:
 easy as pie = lätt som en pannkaka
@@ -11,7 +12,7 @@ easy peasy = lätt som en plätt
 English- = engelsk
 fast::::er:est|: = snabb:t:a||re:ast|e:t
 French- = fransk
-good = god
+good = bra,god
 good-looking = snygg
 green::::er:est| = grön:t:a||re:ast|e
 kind::::er:est| = snäll:t:a||re:ast|e
