Added participle - fixed capitalizer - put synonymResolver after arranger - improved arrangement generator TODO: Score calculation error

--- a/Languages/EnglishSwedish/Words/Adjectives.txt
+++ b/Languages/EnglishSwedish/Words/Adjectives.txt
@@ -1,6 +1,4 @@
-﻿achievement-oriented = prestationsorienterad
-alright = okej
-assistant = biträdande
+﻿alright = okej
 big::::er:est| = stor:t:a||_2örre:_2örst|a
 black::::er:est| = svart::a||re:ast|e
 blue::::r:st| = blå:tt:a||re:ast|e
@@ -13,12 +11,10 @@ English- = engelsk
 fast::::er:est|: = snabb:t:a||re:ast|e:t
 French- = fransk
 good = bra,god
-good-looking = snygg
 green::::er:est| = grön:t:a||re:ast|e
 kind::::er:est| = snäll:t:a||re:ast|e
 little = liten
 non- = icke-
 old::::er:est| = gammal:t:_3la|!äldre|_3st|a
-speaking = talande
 yellow::::er:est| = gul:t:a||re:ast|e
 young::::er:est| = ung:t:a|!yngre|_2st|a
