--- a/Languages/EnglishSwedish/Words/Nouns.txt
+++ b/Languages/EnglishSwedish/Words/Nouns.txt
@@ -15,6 +15,8 @@ cheese::s| = ost:en:ar|na
 colour::s| = färg:en:er|na
 concert::s| = konsert:en:er|na/
 decision::s| = beslut:en::en
+delegate::s| = representant:en:er|na
+delegation::s| = delegation:en:er|na
 department::s| = avdelning:en:ar|na
 director::s| = direktör:en:er|na
 doll::s| = docka:n:_or|na
