--- a/Languages/EnglishSwedish/Words/Verbs.txt
+++ b/Languages/EnglishSwedish/Words/Verbs.txt
@@ -16,6 +16,7 @@ look 4::s 5:ed 4:ing = titta: 4:r 4:de:t :r:de:t:
 make 4::s 5:_2de 4:_ing = gör:a 4: 4!gjorde|_2t :!gjorde|_2t:a
 paint 4::s 5:ed 4:ing = måla: 4:r 4:de:t :r:de:t:
 play 4::s 5:ed 4:ing = lek:a 4:er 4:te:t :er:te:t:a
+regard 4::s 5:ed 4:ing = gäll:a 4:er 4:de:t :er:de:t:a
 run 4::s 4!ran: 4:ning = spring:a 4:er 4:_3ang|_3ungit :er:_3ang|_3ungit:a
 see 4::s 4:_2aw:n 4:_ing = se: 4:r 4:_åg:tt :r:_åg:tt:
 shake 4::s 4:d:n 4:_ing = skaka: 4:r 4:de:t :r:de:t:
