--- a/Languages/EnglishSwedish/TestCases.txt
+++ b/Languages/EnglishSwedish/TestCases.txt
@@ -203,4 +203,4 @@
 "Camilla currently works as an assistant on the product department at Albrecht's Gold.", "Camilla arbetar idag som assistent på produktavdelningen på Albrekts Guld."
 "Despite this his assistant, or secretary, voted here with Mr Becali's MEP card.", "Trots detta röstade hans assistent, eller sekreterare, här med herr Becalis ledamotskort."
 "When he was my assistant, he was a very good policeman... with a bright future.", "När han var min assistent var han en bra polis... med en ljus framtid."
-//"As regards the delegation, the delegate has been appointed, as has the assistant delegate.", "Vad gäller delegationen är representanten utsedd, liksom den biträdande representanten."
+"As regards the delegation, the delegate has been appointed, as has the assistant delegate.", "Vad gäller delegationen är representanten utsedd, liksom den biträdande representanten."
