All tests green - limited arranger length to 7

--- a/Languages/EnglishSwedish/OldPatterns.txt
+++ b/Languages/EnglishSwedish/OldPatterns.txt
@@ -4,7 +4,6 @@ At*P*:2
 Vb:2
 Vl:2
 !*:1
-,_Tq*:1
 .R3:1
 >*V:1
 Ad*:1
@@ -13,7 +12,6 @@ At*.:1
 C*:1
 C*R*:1
 D*P*:1
-D*Xi*:1
 Dd*X*:1
 Dt*____Rt*:1
 Dt*___At*:1
@@ -23,7 +21,6 @@ I*V:1
 N*_Tt*:1
 N,:1
 P*R3:1
-P*T*:1
 Q*P*:1
 Q_Nd*:1
 Qn*Nn*:1
@@ -39,6 +36,7 @@ Rt3.:1
 T*A:1
 Td*Nd*:1
 Td_Nd*:1
+TdB*:1
 Tn*_Nn*:1
 Tnq*Q*:1
 Tq*_Nd*:1
