--- a/Languages/EnglishSwedish/Words/Nouns.txt
+++ b/Languages/EnglishSwedish/Words/Nouns.txt
@@ -1,6 +1,7 @@
 address::es| = adress:en:er|na
 apple::s|<t = äpple:t:n:na
 assistant::s| = assistent:en:er|na
+assistant supervisor::s| = handledare:n::_na
 ball::s| = boll:en:ar|na
 banana::s| = banan:en:er|na
 bed::s| = säng:en:ar|na
@@ -23,6 +24,7 @@ doll::s| = docka:n:_or|na
 dot::s| = prick:en:_ar|na
 error::s| = fel:et:er:en
 essay::s| = uppsats:en:er|na
+expertise::s| = kompetens:en:er|na
 foot::_3eet| = fot:en:__ötter|na
 future::s| = framtid:en:er|na
 gold: = guld:et
@@ -31,6 +33,7 @@ hand::s| = hand:en:_3änder|na
 handling of cases = handläggning
 lake::s| = sjö:n:ar|na
 livingroom::s| = vardagsrum:met::men
+main = huvud/
 mark::s| = märke:t:n|a
 MEP card::s| = ledamotskort:en::en
 morning::s| = morgon:en:_2nar|na
@@ -51,6 +54,7 @@ sea::s|<t = hav:et::en
 secretary::_ies| = sekreterare:n::_na
 search = sök/
 street::s| = gata:n:_or|na/_u
+supervisor::s| = handledare:n::_na
 table::s|<t = bord:et:|en
 theater::s| = teater:n:_2rar|na
 ::trousers| = ::byxor|na
