--- a/Languages/EnglishSwedish/TestCases.txt
+++ b/Languages/EnglishSwedish/TestCases.txt
@@ -204,3 +204,12 @@
 "Despite this his assistant, or secretary, voted here with Mr Becali's MEP card.", "Trots detta röstade hans assistent, eller sekreterare, här med herr Becalis ledamotskort."
 "When he was my assistant, he was a very good policeman... with a bright future.", "När han var min assistent var han en bra polis... med en ljus framtid."
 "As regards the delegation, the delegate has been appointed, as has the assistant delegate.", "Vad gäller delegationen är representanten utsedd, liksom den biträdande representanten."
+//"There has been a reduction in the disparity at assistant, head of unit and director levels.", "Den ojämna könsfördelningen på assistent-, enhetschefs- och direktörsnivå har minskat."
+"The assistant supervisor may be able to contribute expertise that the main supervisor lacks.", "Handledaren kan exempelvis tillföra kompetens som huvudhandledaren saknar."
+//"Maria Ek Styvén, assistant professor in industrial marketing", "Fil.dr Maria Ek Styvén, forskare och universitetslektor i industriell marknadsföring"
+//"Once aid is approved, the Technical Assistant monitors its implementation on the ground.", "Så snart biståndet har godkänts övervakar den tekniske experten dess genomförande på platsen."
+//"The Technical Assistant also coordinates with other donors and humanitarian stakeholders.", "Den tekniske experten svarar även för samordning med andra givare och humanitära intressenter."
+//"The first half as a political group assistant, the second as Member of Parliament.", "Den första halvan av tiden som assistent i en politisk grupp, den senare halvan som parlamentsledamot."
+//"Data protection (appointment of the European supervisor and the assistant supervisor): see Minutes", "Dataskydd (utnämning av datatillsynsman och biträdande datatillsynsman): se protokollet"
+//"Anna Ingemark Milos, Assistant Professor of Art History, focuses at our built environment.", "Universitetslektor Anna Ingemark Milos inriktning inom konstvetenskapen är vår gestaltade miljö."
+//"We are about 107 employees, including 23 PhD, six professors and seven assistant professors.", "Vi är cirka 107 anställda, varav 23 doktorander, sex professorer och sju biträdande professorer."
