--- a/Languages/EnglishSwedish/Words/Adjectives.txt
+++ b/Languages/EnglishSwedish/Words/Adjectives.txt
@@ -3,7 +3,6 @@ big::::er:est| = stor:t:a||_2örre:_2örst|a
 black::::er:est| = svart::a||re:ast|e
 blue::::r:st| = blå:tt:a||re:ast|e
 bright::::er:est| = ljus:t:a||re:ast|e
-red::::er:est| = röd:_tt:a||re:ast|e
 easy::::_ier|_st:_ily = lätt::a||re:ast|e:
 easy as pie = lätt som en pannkaka
 easy peasy = lätt som en plätt
@@ -16,5 +15,7 @@ kind::::er:est| = snäll:t:a||re:ast|e
 little = liten
 non- = icke-
 old::::er:est| = gammal:t:_3la|!äldre|_3st|a
+red::::er:est| = röd:_tt:a||re:ast|e
+technical 3: = teknisk:t:e:a
 yellow::::er:est| = gul:t:a||re:ast|e
 young::::er:est| = ung:t:a|!yngre|_2st|a
