--- a/Languages/EnglishSwedish/Words/Nouns.txt
+++ b/Languages/EnglishSwedish/Words/Nouns.txt
@@ -1,13 +1,14 @@
 address::es| = adress:en:er|na
+aid::s|<t = bistånd:et::en
 apple::s|<t = äpple:t:n:na
-assistant::s| = assistent:en:er|na
+assistant::s| = assistent:en:er|na,expert:en:er|na
 assistant supervisor::s| = handledare:n::_na
 ball::s| = boll:en:ar|na
 banana::s| = banan:en:er|na
 bed::s| = säng:en:ar|na
 bird::s| = fågel:n:_2lar|na
 book::s| = bok:en:_2öcker|na
-bouncing ball::s| = studsboll:en:ar|na
+bouncing = studs/
 car::s| = bil:en:ar|na
 cat::s| = katt:en:er|na
 case::s| = fall:et::en
@@ -15,38 +16,40 @@ chair::s| = stol:en:ar|na
 cheese::s| = ost:en:ar|na
 colour::s| = färg:en:er|na
 concert::s| = konsert:en:er|na/
-decision::s| = beslut:en::en
+decision::s|<t = beslut:et::en
 delegate::s| = representant:en:er|na
 delegation::s| = delegation:en:er|na
 department::s| = avdelning:en:ar|na
 director::s| = direktör:en:er|na
 doll::s| = docka:n:_or|na
 dot::s| = prick:en:_ar|na
-error::s| = fel:et:er:en
+error::s|<t = fel:et:er:en
 essay::s| = uppsats:en:er|na
 expertise::s| = kompetens:en:er|na
 foot::_3eet| = fot:en:__ötter|na
 future::s| = framtid:en:er|na
-gold: = guld:et
+gold:<t = guld:et
+ground::s| = plats:en:er|na
 hall::s| = hall:en:ar|na
 hand::s| = hand:en:_3änder|na
-handling of cases = handläggning
+handling of cases: = handläggning:en
+implementation::s|<t = genomförande:t:n|a
 lake::s| = sjö:n:ar|na
-livingroom::s| = vardagsrum:met::men
+livingroom::s|<t = vardagsrum:met::men
 main = huvud/
 mark::s| = märke:t:n|a
-MEP card::s| = ledamotskort:en::en
+MEP card::s|<t = ledamotskort:et::en
 morning::s| = morgon:en:_2nar|na
 mouse::_4ice| = mus:en:__öss|en
 mr = herr
-nest::s|<t = bo:n|a|s
+nest::s|<t = bo:t:n|a
 pen::s| = penna:n:_or|na
 policeman::__en| = polis:en:er|na
 product::s| = produkt:en:er|na/
 rainbow::s| = regnbåge:n:_ar|na
 rat::s| = råtta:n:_or|na
 result::s|<t = resultat:et::en
-room::s| = rum:met::men
+room::s|<t = rum:met::men
 rug::s| = matta:n:_or|na
 salesman::_2en| = säljare:n::_na
 school::s| = skola:n:_or|na
@@ -58,6 +61,6 @@ supervisor::s| = handledare:n::_na
 table::s|<t = bord:et:|en
 theater::s| = teater:n:_2rar|na
 ::trousers| = ::byxor|na
-university::_ies| = universitet:et:en|s/s
+university::_ies|<t = universitet:et:en|s/s
 wall::s| = vägg:en:ar|na
 window::s| = fönster:_2ret::na
